--- a/client/src/containers/SideBar/styles.scss
+++ b/client/src/containers/SideBar/styles.scss
@@ -1,4 +1,6 @@
-@import '../../css/init';
+@import '~bootstrap/scss/functions';
+@import '~bootstrap/scss/mixins';
+@import '~bootstrap/scss/variables';
 
 $sidebarWidth: 70px;
 $sidebarExpandedWidth: 250px;
@@ -6,7 +8,7 @@ $sidebarTransition: 0.5s;
 
 .sidenav---sidenav---_2tBP {
   .logo-wrapper {
-    background: $tertiary;
+    background: #005f81;
     border-bottom: 4px solid $yellow;
     padding-bottom: 10px;
     padding-top: 1px;
@@ -44,6 +46,29 @@ $sidebarTransition: 0.5s;
 }
 
 .sidenav---sidenav-subnav---1EN61 {
+  background-color: $gray-600 !important;
   max-height: calc(30vh);
   overflow: auto !important;
+}
+
+.sidenav---navtext---1AE_f {
+  a {
+    text-decoration: none;
+    color: $gray-100;
+  }
+  .active {
+    font-weight: bold;
+  }
+}
+
+.sidenav---sidenav-navitem---uwIJ- {
+  &:hover {
+    background-color: $body-bg-dark;
+  }
+  &.active  {
+    background-color: $body-bg-dark;
+  }
+  &.nav-clusters {
+    background-color: $gray-600;
+  }
 }
