Fixing styles on topic produce + copy

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -63,7 +63,7 @@ footer div, footer a {
   display: inline-flex !important;
 }
 
-.settings-wrapper {
+.settings-wrapper, .select-wrapper {
   display: flex;
 }
 
