--- a/client/src/containers/Topic/TopicCopy/styles.scss
+++ b/client/src/containers/Topic/TopicCopy/styles.scss
@@ -19,3 +19,10 @@
 .input-nr-messages {
   margin-left: 3px;
 }
+
+.dropdown-toggle,
+.dropdown-toggle:hover,
+.dropdown-toggle:focus {
+  background-color: transparent !important;
+  border-color: transparent !important;
+}
