--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -7,6 +7,45 @@ $theme-colors: (
   'warning': $warning
 );
 
+#content {
+  transition: all 0.2s ease;
+
+  aside {
+    width: 100%;
+    left: 0;
+  }
+}
+
+#content aside {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: red;
+  padding: 5px 15px;
+  background: $black;
+  border-top: 1px solid $nav-tabs-border-color;
+  display: flex;
+  justify-content: flex-end;
+  z-index: $zindex-fixed;
+
+  > div {
+    flex: 1;
+
+    &:first-child {
+      flex-grow: 2;
+    }
+
+    &:last-child {
+      text-align: right;
+    }
+  }
+
+  .btn {
+    white-space: nowrap;
+  }
+}
+
 body {
   background-color: $body-bg-dark;
   color: $gray-100;
