--- a/client/src/components/Base/Base.scss
+++ b/client/src/components/Base/Base.scss
@@ -1,8 +1,3 @@
-@import '../../variables.scss';
-@import 'node_modules/bootstrap/scss/functions';
-@import 'node_modules/bootstrap/scss/variables';
-@import 'node_modules/bootstrap/scss/mixins';
-
 #content {
   min-height: 100vh;
   padding: 20px 20px 65px;
@@ -24,8 +19,8 @@
 }
 
 .expanded {
-  margin-left: $menu-width !important;
-  width: calc(100% - $menu-width) !important;
+  margin-left: $sidebar-expanded !important;
+  width: calc(100% - $sidebar-expanded) !important;
 }
 
 .collapsed {
