--- a/client/src/components/Pagination/styles.scss
+++ b/client/src/components/Pagination/styles.scss
@@ -4,7 +4,7 @@ input.page-input {
   border: 0;
   padding: 0;
   background: transparent;
-  color: white;
+  color: $white;
 }
 
 /*remove arrows from input*/
@@ -18,19 +18,4 @@ input::-webkit-inner-spin-button {
 /* Firefox */
 input[type='number'] {
   -moz-appearance: textfield;
-}
-
-#result-per-page {
-  margin-right: 15px;
-}
-
-.page-link {
-  color: white;
-}
-
-.page-item.before,
-.page-item.after {
-  .page-link {
-    background-color: $primary;
-  }
 }
