--- a/client/src/components/Table/styles.scss
+++ b/client/src/components/Table/styles.scss
@@ -30,7 +30,7 @@ td {
   right: 2px;
   top: -5px;
   cursor: pointer;
-  font-size: 1.25rem;
+  font-size: $font-size-lg;
 }
 
 .empty-consumergroups {
