--- a/client/src/containers/Tail/styles.scss
+++ b/client/src/containers/Tail/styles.scss
@@ -76,10 +76,10 @@ select.selectpicker {
 .bootstrap-select > .dropdown-toggle.bs-placeholder.btn-info:hover,
 .bootstrap-select > .dropdown-toggle.bs-placeholder.btn-info:focus,
 .bootstrap-select > .dropdown-toggle.bs-placeholder.btn-info:active,
-.bootstrap-select > .dropdown-toggle.bs-placeholder.btn-secondary,
-.bootstrap-select > .dropdown-toggle.bs-placeholder.btn-secondary:hover,
-.bootstrap-select > .dropdown-toggle.bs-placeholder.btn-secondary:focus,
-.bootstrap-select > .dropdown-toggle.bs-placeholder.btn-secondary:active {
+.bootstrap-select > .dropdown-toggle.bs-placeholder.btn-dark,
+.bootstrap-select > .dropdown-toggle.bs-placeholder.btn-dark:hover,
+.bootstrap-select > .dropdown-toggle.bs-placeholder.btn-dark:focus,
+.bootstrap-select > .dropdown-toggle.bs-placeholder.btn-dark:active {
   color: rgba(255, 255, 255, 0.5);
 }
 
