--- a/client/src/variables.scss
+++ b/client/src/variables.scss
@@ -9,14 +9,34 @@ $scrollbar-width: 0.5em;
 \* ----------------------------------------------------------------------------------------------------------------- */
 
 // Typography
-$font-family-sans-serif: 'Open Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol',
-'Noto Color Emoji' !default;
+$font-family-sans-serif:
+  'Open Sans',
+  -apple-system,
+  BlinkMacSystemFont,
+  'Segoe UI',
+  Roboto,
+  'Helvetica Neue',
+  Arial,
+  sans-serif,
+  'Apple Color Emoji',
+  'Segoe UI Emoji',
+  'Segoe UI Symbol',
+  'Noto Color Emoji' !default;
 $font-family-monospace: 'Source Code Pro', SFMono-Regular, Menlo, Monaco, Consolas,
-'Liberation Mono', 'Courier New', monospace !default;
-$font-family-title: 'Open Sans Condensed', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol',
-'Noto Color Emoji' !default;
+  'Liberation Mono', 'Courier New', monospace !default;
+$font-family-title:
+  'Open Sans Condensed',
+  -apple-system,
+  BlinkMacSystemFont,
+  'Segoe UI',
+  Roboto,
+  'Helvetica Neue',
+  Arial,
+  sans-serif,
+  'Apple Color Emoji',
+  'Segoe UI Emoji',
+  'Segoe UI Symbol',
+  'Noto Color Emoji' !default;
 $font-size-base: 0.875rem;
 $font-weight-bolder: 700;
 
@@ -53,11 +73,6 @@ $warning: $yellow !default;
 $danger: $red !default;
 $light: $gray-800 !default;
 $dark: $gray-500 !default;
-
-$theme-colors: (
-        'tertiary': $tertiary,
-        'white': $white
-);
 
 $yiq-contrasted-threshold: 175 !default;
 
