--- a/client/src/css/forms/multiple.scss
+++ b/client/src/css/forms/multiple.scss
@@ -1,14 +1,13 @@
 .khq-multiple {
-  margin-left: 0;
   > div {
     display: flex;
+    margin-bottom: 1rem;
 
     &:first-child {
       flex-grow: 1;
     }
 
     .row {
-      margin-bottom: 0;
       &:last-child {
         margin-left: 0;
         margin-right: 0;
