Standardize indigo/blue colors Apply primary color on pagination Standardize lighten/darken on hover Remove white class on Tail dropdowns

--- a/client/src/containers/Tail/styles.scss
+++ b/client/src/containers/Tail/styles.scss
@@ -503,6 +503,14 @@ select.selectpicker {
   float: none;
 }
 
+.btn-block {
+  width: 100%;
+
+  .bs-select-all {
+    margin-right: 8px !important;
+  }
+}
+
 .bootstrap-select {
   width: auto !important;
 }
