--- a/client/src/variables.scss
+++ b/client/src/variables.scss
@@ -64,7 +64,7 @@ $green: #299c46 !default;
 $teal: #20c997 !default;
 $cyan: #3498db !default;
 
-$primary: $blue !default;
+$primary: $indigo !default;
 $secondary: $gray-700 !default;
 $tertiary: $indigo;
 $success: $green !default;
@@ -83,6 +83,12 @@ $body-color: $white !default;
 // Links
 $link-color: $blue !default;
 
+.btn-primary {
+  &:hover {
+    background-color: lighten($primary, 10%) !important;
+  }
+}
+
 // Tables
 $table-bg: transparent;
 $table-accent-bg: $gray-800 !default;
@@ -90,7 +96,7 @@ $table-border-color: $gray-700 !default;
 $table-dark-bg: $black !default;
 $table-dark-border-color: $gray-700 !default;
 $table-dark-color: $white !default;
-$table-hover-bg: darken($primary, 25%);
+$table-hover-bg: $primary;
 
 // Forms
 $input-group-addon-color: $gray-500 !default;
@@ -120,7 +126,7 @@ $nav-tabs-link-active-border-color: $nav-tabs-border-color $nav-tabs-border-colo
 // Navbar
 $navbar-padding-y: 1rem !default;
 $navbar-dark-color: $white !default;
-$navbar-dark-hover-color: $success !default;
+$navbar-dark-hover-color: $primary !default;
 $navbar-light-color: rgba($white, 0.5) !default;
 $navbar-light-hover-color: $white !default;
 $navbar-light-active-color: $white !default;
@@ -129,16 +135,16 @@ $navbar-light-toggler-border-color: rgba($white, 0.1) !default;
 
 // Pagination
 $pagination-color: $white !default;
-$pagination-bg: $success !default;
+$pagination-bg: $primary !default;
 $pagination-border-width: 0 !default;
 $pagination-border-color: transparent !default;
 $pagination-hover-color: $white !default;
-$pagination-hover-bg: lighten($success, 10%) !default;
+$pagination-hover-bg: lighten($primary, 10%) !default;
 $pagination-hover-border-color: transparent !default;
 $pagination-active-bg: $pagination-hover-bg !default;
 $pagination-active-border-color: transparent !default;
 $pagination-disabled-color: $white !default;
-$pagination-disabled-bg: darken($success, 15%) !default;
+$pagination-disabled-bg: darken($primary, 15%) !default;
 $pagination-disabled-border-color: transparent !default;
 
 // Jumbotron
