--- a/client/src/components/Form/styles.scss
+++ b/client/src/components/Form/styles.scss
@@ -48,7 +48,9 @@ form {
     background-color: var(--bs-body-bg);
     border: var(--bs-border-width) solid var(--bs-border-color);
     border-radius: var(--bs-border-radius);
-    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+    transition:
+      border-color 0.15s ease-in-out,
+      box-shadow 0.15s ease-in-out;
 
     button {
       padding-left: 0;
